# vk_displacement_micromaps

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  barymap_vk.cpp  barymap_vk.hpp  baryset.cpp  baryset.hpp  cgltf.cpp  common.h  common_barymap.h  common_mesh.h  common_micromesh.h  common_micromesh_compressed.h  common_micromesh_compressed_rt.h  common_micromesh_uncompressed.h  config.h  drast_compressed_lod_flat_mesh.comp.glsl  drast_compressed_lod_flat_task.comp.glsl  drast_compressed_lod_flatsplit_task.comp.glsl  drast_shade_compressed.frag.glsl  drast_shade_uncompressed.frag.glsl  drast_shade_uncompressed.vert.glsl  drast_uncompressed_lod_flat_mesh.comp.glsl  drast_uncompressed_lod_flat_task.comp.glsl  drast_uncompressed_lod_flatsplit_task.comp.glsl  drast_utils.glsl  draw_compressed_basic.frag.glsl  draw_compressed_basic.mesh.glsl  draw_compressed_basic.task.glsl  draw_compressed_lod.frag.glsl  draw_compressed_lod.mesh.glsl  draw_compressed_lod.task.glsl  draw_culling.glsl  draw_shading.glsl  draw_shell.frag.glsl  draw_shell.vert.glsl  draw_standard.frag.glsl  draw_standard.vert.glsl  (+81 more)
PACKAGE-LICENSES/: half-LICENSE.md
